--- a/rw/index.html
+++ b/rw/index.html
@@ -12,14 +12,18 @@
     <div class="container">
       <div class="header__inner">
         <div class="header__links">
-          <a href="tel:380509525094"><img src="img/phone-alt-solid.svg" alt="phone"></a>
-          <a href="https://www.instagram.com/rw_dental_clinic/"><img src="img/instagram-brands.svg" alt="instagram"></a>
-          <a href="https://www.facebook.com/rw.dentalclinic/"><img src="img/facebook-f-brands.svg" alt="facebook"></a>
+          <a href="tel:380509525094"><img src="img/phone-icons.png" alt="phone"></a>
+          <a href="https://www.instagram.com/rw_dental_clinic/"><img src="img/insta-icons.png" alt="instagram"></a>
+          <a href="https://www.facebook.com/rw.dentalclinic/"><img src="img/facebook-icons.png" alt="facebook"></a>
+          <a href="viber://chat?number=%2B380509525094"><img src="img/viber-icons.png" alt="viber"></a>
         </div>
         <div class="header__line">
         </div>
         <div class="logo">
           <a href="index.html"><img src="img/logo.png" alt=""></a>
+        </div>
+        <div class="header__pic">
+          <img src="img/header-bg2min.png" alt="">
         </div>
         <div class="header__text">
           Let  your  smile  
@@ -28,6 +32,7 @@
         <div class="header__btn">
           <a href="#form">Записатись</a>
         </div>
+        <button class="button button_testimonials">Написати відгук</button>
       </div>
     </div>
   </header>
@@ -45,7 +50,7 @@
             Лiкування карiесу
           </div>
           <div class="services__item-price">
-            вiд 350 грн
+            вiд 450 грн
           </div>
           <div class="services__item-btn">
             <a href="#form">
@@ -132,7 +137,7 @@
             стоматологя
           </div>
           <div class="services__item-price">
-            вiд 220 грн
+            вiд 350 грн
           </div>
           <div class="services__item-btn">
             <a href="#form">
@@ -180,7 +185,7 @@
             косметолога
           </div>
           <div class="services__item-price">
-            вiд 350 грн
+            вiд 500 грн
           </div>
           <div class="services__item-btn">
             <a href="#form">
@@ -208,6 +213,7 @@
   </section>
 
   <section class="reasons">
+    <div class="reasons__gradient"></div>
     <div class="container">
       <h2 class="title title_reasons">
         <span>5</span> причин,<br>
@@ -258,15 +264,6 @@
             </div>
           </div>
           <div class="testimonials__item">
-            <div class="testimonials__item-title">
-              Оцініть нашу клініку
-            </div>
-            <div class="testimonials__item-stars testimonials__item-stars_big">
-              <img src="img/stars2.png" alt="stars">
-            </div>
-            <button class="button button_testimonials">Написати відгук</button>
-          </div>
-          <div class="testimonials__item">
             <div class="testimonials__item-name">
               Саша
             </div>
@@ -312,7 +309,7 @@
   <section class="contacts">
     <div class="container">
       <div class="title title_contacts">
-        Як нас знайти
+        Як <span>нас</span> знайти
       </div>
       <div class="contacts__inner">
         <div class="contacts__map">
@@ -321,7 +318,7 @@
         <div class="contacts__info">
           <div class="contacts__item">
             <div class="contacts__item-image"><img src="img/map-marker-alt-solid.svg" alt="address"></div>
-            <div class="contacts__item-text">м. Київ, вул. Андрія Аболмасова(Панельна), 7</div>
+            <div class="contacts__item-text">м. Київ, вул. Андрія Аболмасова (Панельна), 7</div>
           </div>
           <div class="contacts__item">
             <div class="contacts__item-image"><img src="img/calendar-alt-solid.svg" alt="calendar"></div>
@@ -330,7 +327,7 @@
           </div>
           <div class="contacts__item">
             <div class="contacts__item-image"><img src="img/phone-alt-solid.svg" alt="phone"></div>
-            <div class="contacts__item-text">050 952 50 94</div>
+            <div class="contacts__item-text"><a href="tel:380509525094">050 952 50 94</a></div>
           </div>
         </div>
       </div>
