--- a/rw/index.html
+++ b/rw/index.html
@@ -14,12 +14,15 @@
       <div></div>
       <div></div>
     </div>
-    <ul class="list active">
+    <ul class="list">
       <li><a href="#header">Головна</a></li>
       <li><a href="#services">Послуги</a></li>
       <li><a href="#testimonials">Відгуки</a></li>
       <li><a href="#contacts">Контакти</a></li>
     </ul>
+    <a href="#header" class="up">
+      <img src="img/arrow-up-solid.svg" alt="up">
+    </a>
     <div class="container">
       <div class="header__inner">
         <div class="header__links">
