--- a/rw/index.html
+++ b/rw/index.html
@@ -10,9 +10,21 @@
 <body>
   <header id="header" class="header">
     <div class="menu">
-      <div></div>
-      <div></div>
-      <div></div>
+      <div class="language">
+        <a href="">UA</a>
+        <a href="">RU</a>
+        <a href="">EN</a>
+      </div>
+      <div class="logotype">
+        <a href="#">
+          <img src="img/logo-mini.png" alt="logo">
+        </a>
+      </div>
+      <div class="burger">
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
     </div>
     <ul class="list">
       <li><a href="#header">Головна</a></li>
@@ -210,7 +222,7 @@
         </div>
         <div class="services__item">
           <div class="services__item-title">
-            Агументація губ
+            Аугментація губ
           </div>
           <div class="services__item-price">
             вiд 3500 грн
