--- a/rw/index.html
+++ b/rw/index.html
@@ -71,21 +71,15 @@
         Стоматологія
       </div>
       <div class="services__items">
-        <div class="services__item">
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Лiкування карiесу
           </div>
           <div class="services__item-price">
             вiд 450 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Вiдбілювання<br>
             зубів
@@ -93,28 +87,16 @@
           <div class="services__item-price">
             вiд 950 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Брекети
           </div>
           <div class="services__item-price">
             вiд 12900 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Зняття зубного<br>
             каменю  та нальоту
@@ -122,42 +104,24 @@
           <div class="services__item-price">
             вiд 450 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Протезування зубiв
           </div>
           <div class="services__item-price">
             вiд 600 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Лiкування каналів
           </div>
           <div class="services__item-price">
             вiд 600 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Дитяча<br>
             стоматологя
@@ -165,47 +129,29 @@
           <div class="services__item-price">
             вiд 350 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Iмплантація
           </div>
           <div class="services__item-price">
             вiд 8800 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
+        </a>
       </div>
       <div class="services__subtitle">
         Косметологія
       </div>
       <div class="services__items services__items_center">
-        <div class="services__item">
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Плазмолiфтинг
           </div>
           <div class="services__item-price">
             вiд 1300 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Консультацiя<br>
             косметолога
@@ -213,27 +159,15 @@
           <div class="services__item-price">
             вiд 500 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
-        <div class="services__item">
+        </a>
+        <a href="#form" class="services__item">
           <div class="services__item-title">
             Аугментація губ
           </div>
           <div class="services__item-price">
             вiд 3500 грн
           </div>
-          <div class="services__item-btn">
-            <a href="#form">
-              <span></span>
-              <span></span>
-            </a>
-          </div>
-        </div>
+        </a>
       </div>
     </div>
   </section>
